src/test/ui/const-generics/argument_order.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/argument_order.rs:4:28
   |
LL | struct Bad<const N: usize, T> {
   |           -----------------^- help: reorder the parameters: lifetimes, then types, then consts: `<T, const N: usize>`

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/argument_order.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to previous error; 1 warning emitted

